; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_error.c__zip_error_get.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_error.c__zip_error_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_error = type { i32, i32 }

@ZIP_ET_NONE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zip_error_get(%struct.zip_error* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.zip_error*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.zip_error* %0, %struct.zip_error** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.zip_error*, %struct.zip_error** %4, align 8
  %11 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %5, align 8
  store i32 %12, i32* %13, align 4
  br label %14

14:                                               ; preds = %9, %3
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %32

17:                                               ; preds = %14
  %18 = load %struct.zip_error*, %struct.zip_error** %4, align 8
  %19 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @zip_error_get_sys_type(i32 %20)
  %22 = load i64, i64* @ZIP_ET_NONE, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.zip_error*, %struct.zip_error** %4, align 8
  %26 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %6, align 8
  store i32 %27, i32* %28, align 4
  br label %31

29:                                               ; preds = %17
  %30 = load i32*, i32** %6, align 8
  store i32 0, i32* %30, align 4
  br label %31

31:                                               ; preds = %29, %24
  br label %32

32:                                               ; preds = %31, %14
  ret void
}

declare dso_local i64 @zip_error_get_sys_type(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
